kubernetes/apps/monitoring/uptime-kuma/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Uptime Kuma"
    gethomepage.dev/description: "Uptime monitoring tool"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "uptime-kuma.png"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_cache_bypass $http_upgrade;
      }
    # Authentik forward auth annotations
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-uptime-kuma-forward-auth.kube-system.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://kuma.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Proxy-Secret fcaedf3d1840460a3d0b2f3c045954aef1cb29bee02e65d79fc87f43009051f78037483328fc562b178198467ccd50253118c896299e984fd81b9527fdb57bd9;
  labels:
    gethomepage.dev/enabled: "true"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - "kuma.${SECRET_DOMAIN}"
  rules:
    - host: "kuma.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
